# cost-of-living

./: .gitignore  pyproject.toml
cost_of_living/: city_spider.py  numbeo.py
frontend/: index.html  styles.css
spiders/: spider.py
tests/: chromedriver.py  geckodriver.py
utils/: logging.py
