[tool.poetry]
name = "cost-of-living"
version = "0.1.0"
description = ""
authors = ["Dean Kayton <deankayton@gmail.com>"]
readme = "README.md"
packages = [
    { include = "**/*.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
scrapy = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.selenium]
chrome_driver = "drivers/chromedriver"
